--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Puppies</string>
     <string name="tvName">Puppy</string>
     <string name="tvRaiting">0</string>
+    <string name="itemFavorites">Favorites</string>
+    <string name="itemSettings">Settings</string>
 </resources>
