Integrando Web Services

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="itemFavorites">Favoritos</string>
     <string name="app_name">Mascotas</string>
-    <string name="itemSettings">Configuracion</string>
+    <string name="itemSettings">Configurar cuenta</string>
     <string name="tvName">Puppy</string>
     <string name="btSend">Enviar Mensaje</string>
     <string name="etMessage">Mensaje:</string>
@@ -12,4 +12,8 @@
     <string name="pleaseWait">Por favor espere...</string>
     <string name="sendingEmail">Enviando Email</string>
     <string name="sentEmail">Email Enviado</string>
+    <string name="save">Guardar</string>
+    <string name="search">Buscar</string>
+    <string name="enterUsername">Introduce tu usuario</string>
+    <string name="saveAccount">Guardar Cuenta</string>
 </resources>
